--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "tsc-watch --onSuccess \"node dist/index.js\" --preserveWatchOutput",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+     "postinstall": "prisma generate"
   },
   "keywords": [],
   "author": "",
