--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "dev": "tsc-watch --onSuccess \"node dist/index.js\" --preserveWatchOutput",
     "build": "tsc",
-    "start": "node dist/index.js",
-     "postinstall": "prisma generate"
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
