--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,8 +24,12 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "baseUrl": "./",
+    "paths": {
+      "*": ["node_modules/*"]
+    }
   },
-  "include": ["src", "src/generate.ts","node_modules/@prisma/client"],
+  "include": ["src/**/*", "src/generate.ts","node_modules/@prisma/client"],
   "exclude": ["node_modules"]
 } 
